added get data logic for userList